darkmode sur mobile

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,14 @@
     <meta name="theme-color" content="#FFFFFF" />
     <meta
       name="description"
-      content="portfolio tom sabatier"
+      content="Site web de Tom Sabatier, développeur web junior sur Montpellier"
     />
+    <meta name="author" content="Tom Sabatier">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="../src/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+    <meta name="keywords" content="développeur, developer, developer web, web, php, react, sql, html, css, aws, firebase, symfony, nextjs, france, montpellier, junior">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
