--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,17 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FFFFFF" />
+    <meta name="robots" content="index"/>
     <meta
       name="description"
       content="Site web de Tom Sabatier, développeur web junior sur Montpellier"
     />
+    <meta name="Geography" content="france, montpellier">
     <meta name="author" content="Tom Sabatier">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="../src/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
-    <meta name="keywords" content="développeur, developer, developer web, web, php, react, sql, html, css, aws, firebase, symfony, nextjs, france, montpellier, junior">
-
+    <meta name="Keywords" content="développeur, developer, developer web, web, php, react, sql, html, css, aws, firebase, symfony, nextjs, france, montpellier, junior, js, javascript, node, redux">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
