--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="../src/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
-    <meta name="Keywords" content="développeur, developer, developer web, web, php, react, sql, html, css, aws, firebase, symfony, nextjs, france, montpellier, junior, js, javascript, node, redux, tom, sabatier, tom sabatier">
+    <meta name="Keywords" content="développeur, developer, developer web, dev, web, php, react, sql, html, css, aws, firebase, symfony, nextjs, france, montpellier, junior, js, javascript, node, redux, tom, sabatier, tom sabatier">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
